# tmux-window-name

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml  pyrightconfig.json  tmux_window_name.tmux
.github/workflows/: ci.yml  release.yml
scripts/: __init__.py  path_utils.py  rename_session_windows.py
tests/: __init__.py  conftest.py  mocks.py  test_cli.py  test_config.py  test_error_handling.py  test_exclusive_paths.py  test_get_uncommon_path.py  test_icons.py  test_rename_session_windows.py  test_rename_session_windows_edge.py  test_rename_session_windows_unit.py  test_test_utils.py  test_tmux_integration.py  test_utils.py
